# applied-ml-course

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yaml  pyproject.toml
notebooks/: 01-mw-main.ipynb
